This commit alters the layout on mobile devices, adds a suggestion pop-up when in portrait mode & includes small bug fixes

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ button{
 
     @media (width <= 600px) {
         left: 0px;
+        top: 70vh;
     }
 }
 
@@ -23,6 +24,7 @@ button{
 
     @media (width <= 600px) {
         right: 0px;
+        top: 70vh;
     }
 }
 
@@ -41,6 +43,7 @@ body{
     max-height: 25vh;
     width: 40vw;
     border: solid gray;
+    gap: 5px;
 
     /* based off iphone 12 Pro, extended to 600 to cover a wider range of devices */
     @media (width <= 600px) {
@@ -76,6 +79,10 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
+
+    @media (width <= 600px) { 
+        display: flex;
+    }
 }
 
 .displayImage {
@@ -83,6 +90,15 @@ body{
     height: 100%;
     overflow: hidden;
     object-fit: cover;
+
+    @media (width <= 600px) { 
+        width: 100%;
+        height: initial;
+        overflow: initial;
+        object-fit: initial;
+        align-self: center;
+        justify-self: center;
+    }
 }
 
 /* https://css-tricks.com/snippets/css/css-triangle/ */
@@ -124,11 +140,24 @@ body{
     background-color: transparent;
     top: 0.5rem;
     right: 49vw;
+
+    @media (width <= 600px) {
+        top: initial;
+        right: initial;
+        left: 50vw;
+        bottom: 5vh;
+    }
 }
 
 .toggle:hover {
     border-right: 10px dotted gray;
     border-left: 10px dotted gray;
+    
+    /* fix bug where element would remain gray after click on mobile */
+    @media (width <= 600px) {
+        border-right: 10px dotted white;
+        border-left: 10px dotted white;
+    }
 }
 
 .toggle-onclick {
@@ -141,9 +170,61 @@ body{
     background-color: transparent;
     top: 0.5rem;
     right: 49vw;
+
+    @media (width <= 600px) {
+        top: initial;
+        right: initial;
+        left: 50vw;
+        bottom: 5vh;
+    }
 }
 
 .toggle-onclick:hover {
     border-top: 10px dotted gray;
     border-bottom: 10px dotted gray;
+
+    /* fix bug where element would remain gray after click on mobile */
+    @media (width <= 600px) {
+        border-top: 10px dotted white;
+        border-bottom: 10px dotted white;
+    }
+}
+
+.rotate {
+    display: none;
+    /* background-color: gray; */
+    border: solid white;
+    border-radius: 20px;
+    text-wrap: wrap;
+    /* height: 8vh;
+    width: 25vh; */
+    position: absolute;
+    text-align: center;
+    top: 10vh;
+    left: 5vh;
+    right: 5vh;
+    color: white;
+    font-weight: 100;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 2rem;
+
+    /* for mobile in portrait mode only */
+    @media (width < 600px) and (orientation:portrait) {
+        display: flex;
+    }
+}
+
+.close {
+    background-color: black;
+    border: none;
+    /* border-color: white;
+    border-radius: 20px; */
+    width: 25px;
+    color: white;
+    font-size: bold;
+    position: absolute;
+    top:10px;
+    left: 5px;
+    text-align: center;
 }
